--- a/intl.zh-CN/安全/安全组/安全组概述.md
+++ b/intl.zh-CN/安全/安全组/安全组概述.md
@@ -4,111 +4,111 @@ keyword: [安全组, 网络访问控制, 阿里云, ecs, 企业安全组]
 
 # 安全组概述
 
-安全组是一种虚拟防火墙，具备状态检测和数据包过滤能力，用于在云端划分安全域。通过配置安全组规则，您可以控制安全组内ECS实例的入流量和出流量。
+安全组是一种虚拟防火墙，用于控制安全组内ECS实例的入流量和出流量，从而提高ECS实例的安全性。安全组具备状态检测和数据包过滤能力，您可以基于安全组的特性和安全组规则的配置在云端划分安全域。
 
-## 安全组定义
+## 安全组和安全组规则
 
-安全组是一个逻辑上的分组，由同一地域内具有相同安全保护需求并相互信任的实例组成。
+安全组是一个逻辑上的分组，由同一地域内具有相同安全保护需求的实例组成。安全组具有以下通用特性：
 
-安全组具有以下功能特点：
+-   实例至少加入一个安全组，可以同时加入多个安全组。
 
--   一台ECS实例至少属于一个安全组，可以同时加入多个安全组。
--   一个安全组可以管理同一个地域内的多台ECS实例。
--   在没有设置允许访问的安全组规则的情况下，不同安全组内的ECS实例之间默认内网不通。
--   安全组支持有状态应用。一个有状态的会话连接中，会话的最长保持时间是910秒。安全组会默认放行同一会话中的通信。例如，在会话期内，如果连接的数据包在入方向是允许的，则在出方向也是允许的。
+    **说明：** 实例上挂载的弹性网卡中，辅助网卡可以加入和实例不同的安全组。
 
-## 安全组类型
+-   不同安全组内的实例之间默认内网隔离。
+-   默认拒绝所有入方向的访问请求。
+-   安全组为有状态应用。一个有状态的会话连接中，会话的最长保持时长是910秒。安全组会默认放行同一会话中的通信。例如，在会话期内，如果连接的数据包在入方向是允许的，则在出方向也是允许的。
 
-安全组分为普通安全组和企业安全组。下表列举了两种类型安全组的功能差异。
+安全组分为普通安全组和企业安全组。企业安全组面向企业级场景，可以容纳更多的实例、弹性网卡和私网IP，而且访问策略更加严格。在安全组通用特性基础上，企业安全组还具有以下特性：
 
-|功能|普通安全组|企业安全组|
-|--|-----|-----|
-|支持所有实例规格|是|否，实例网络类型必须是专有网络VPC|
-|网络类型|专有网络VPC和经典网络|仅专有网络VPC|
-|未添加任何规则时的访问策略|-   入方向：拒绝所有访问请求
--   出方向：允许所有访问请求
+-   仅支持专有网络。
+-   默认拒绝所有出方向的访问请求。
+-   同一安全组内的实例之间默认内网隔离。
 
-|-   入方向：拒绝所有访问请求
--   出方向：拒绝所有访问请求 |
-|默认安全组规则|-   入方向：放行80、443、22、3389及ICMP协议，可修改
--   出方向：允许所有访问请求
+**说明：** 不支持同时加入普通安全组和企业安全组。更多安全组相关的使用限制及配额说明，请参见[安全组使用限制](/intl.zh-CN/产品简介/使用限制.md)。
 
-|-   入方向：放行80、443、22、3389及ICMP协议，可修改
--   出方向：拒绝所有访问请求 |
-|手动添加安全组规则|可按需添加允许或拒绝策略的规则|可按需添加允许或拒绝策略的规则|
-|设置规则优先级|默认值为1，可修改|默认值为1，可修改|
-|授权给其他安全组|支持组组授权|不支持组组授权|
-|支持绑定弹性网卡到任意实例规格|否，实例网络类型必须是专有网络VPC|否，实例网络类型必须是专有网络VPC|
-|能容纳的私网IP地址数量|2000|65536|
-|同一个安全组内实例之间的网络连通策略|默认内网互通|默认内网隔离，需要您手动添加安全组规则|
-|适用场景|适用于对网络精细化控制要求较高、希望使用多种ECS实例规格、以及网络连接数适中的用户场景。|适用于对运维效率、ECS实例规格以及计算节点的规模有更高需求的用户场景。|
+在安全组未添加任何安全组规则时，允许和拒绝访问请求的示意图如下。
 
-## 安全组规则
+-   普通安全组
 
-建立数据通信前，安全组逐条匹配安全组规则查询是否放行访问请求。一条安全组规则由规则方向、授权策略、协议类型、端口范围、授权对象等属性确定， 具体详见下表。
+    ![normal-sg-default](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5436616261/p294390.png)
 
-|属性|说明|
-|--|--|
-|规则方向|根据实例的网络类型区分： -   专有网络VPC支持入方向和出方向。
--   经典网络支持公网出、入方向，内网出、入方向。 |
-|授权策略|支持允许、拒绝两种访问策略。|
-|协议类型|TCP、UDP、ICMP（IPv4）和GRE。|
-|端口范围|应用或协议开启的端口。详情可参见[常用端口](/intl.zh-CN/安全/安全组/常用端口的典型应用.md)。|
-|优先级|优先级的取值范围为1~100，数值越小，代表优先级越高。
+-   企业安全组
 
-同类型规则间依赖优先级决定最终执行的规则。当ECS实例加入了多个安全组时，多个安全组会从高到低依次匹配规则。最终生效的安全组规则如下：
+    ![enterprise-sg-default](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6436616261/p294392.png)
 
--   如果两条安全组规则只有授权策略不同：拒绝策略的规则生效，允许策略的规则不生效。
--   如果两条安全组规则只有优先级不同：优先级高的规则生效。 |
-|授权对象|支持设置IP地址段和安全组ID。 **说明：** 企业安全组不支持设置安全组ID，即不支持组组授权。 |
 
-不同通信场景需要设置的安全组规则属性不同。例如，您使用Xshell客户端远程连接Linux系统ECS实例时，当安全组检测到从公网或内网有SSH请求，会逐一检查入方向上安全组规则、发送请求的设备的IP地址是否已存在、优先级是为同类规则第一、授权策略是否为允许、22端口是否开启等。只有匹配到一条安全组规则允许放行该请求时，方才建立数据通信。下图为使用Xshell远程连接Linux系统ECS实例的规则匹配举例。
+在安全组特性的基础上，您可以通过配置安全组规则自定义允许和拒绝访问请求的规则，新增和修改的安全组规则自动应用于安全组内所有实例。安全组规则支持针对IP地址、CIDR地址块、其他安全组、前缀列表授权。
 
-![安全组规则匹配示意图](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4534129951/p71372.png)
+**说明：** 仅普通安全组支持针对其他安全组授权。
 
-更多规则配置示例，请参见[安全组应用案例](/intl.zh-CN/安全/安全组/安全组应用案例.md)。
+如果一台实例加入了多个安全组，则所有安全组的安全组规则均应用于该实例。在检测到访问请求时，系统会逐一检查适用于实例的安全组规则，根据安全组规则的协议、端口、优先级等属性进行判断，匹配到允许访问的安全组规则时才会建立会话。更多安全组规则的属性说明和示例，请参见[安全组规则概述](/intl.zh-CN/安全/安全组/管理安全组规则/安全组规则概述.md)。
+
+在控制台创建安全组时，系统会自动添加常用的安全组规则，您可以按需修改或删除这些安全组规则。自动添加的安全组规则包括：
+
+-   普通安全组：5条入方向安全组规则，即针对TCP协议允许所有IP访问HTTP\(80\)、HTTPS\(443\)、SSH\(22\)、RDP\(3389\)端口，并针对ICMP\(IPv4\)协议允许所有IP访问所有端口。
+
+    如果在控制台创建安全组时保留了上述安全组规则，允许和拒绝访问请求的示意图如下。
+
+    ![normal-sg-rule](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6436616261/p294393.png)
+
+-   企业安全组：
+
+    -   5条入方向安全组规则，即针对TCP协议允许所有IP访问HTTP\(80\)、HTTPS\(443\)、SSH\(22\)、RDP\(3389\)端口，并针对ICMP\(IPv4\)协议允许所有IP访问所有端口。
+    -   1条出方向安全组规则，即针对所有协议允许所有IP访问所有端口，避免引起网络连通性问题。
+    如果在控制台创建安全组时保留了上述安全组规则，允许和拒绝访问请求的示意图如下。
+
+    ![enterprise-sg-rule](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6436616261/p294395.png)
+
+
+**说明：** 调用API创建安全组时，系统不会自动添加安全组规则。
+
+## 安全组使用指导
+
+使用安全组控制实例流量的典型使用流程如下：
+
+1.  创建安全组。
+2.  添加安全组规则。
+3.  将实例加入安全组。
+4.  按需管理已有安全组和安全组规则。
+
+使用安全组控制辅助网卡流量的典型使用流程如下：
+
+1.  创建安全组。
+2.  添加安全组规则。
+3.  将辅助网卡加入安全组。
+4.  将辅助网卡绑定至实例。
+5.  按需管理已有安全组和安全组规则。
+
+关于安全组的具体操作和应用案例，请参见[操作导航](/intl.zh-CN/安全/安全组/操作导航.md)和[安全组应用案例](/intl.zh-CN/安全/安全组/安全组应用案例.md)。
 
 ## 默认安全组
 
-通过ECS管理控制台创建实例时，若您未在该地域创建安全组，则阿里云会在创建实例的同时，创建一个**默认安全组**。默认安全组为普通安全组，网络类型和ECS实例一致。
+实例至少需要加入一个安全组。通过ECS管理控制台创建实例时，如果您还未在所选地域创建安全组，可以使用默认安全组。系统会在创建实例的同时创建一个安全组，网络类型和实例一致。默认安全组的安全组类型为普通安全组，安全组规则配置如下图所示。
 
 ![默认安全组](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4534129951/p48516.png)
 
-默认安全组的默认安全组规则如下：
+默认安全组规则的效果如下：
 
--   入方向：
-    -   默认放行：ICMP协议、SSH 22端口、RDP 3389端口，授权对象为0.0.0.0/0。
-    -   更多选择：HTTP 80端口和HTTPS 443端口，需自行勾选。
-    -   规则优先级：100。
+-   规则优先级：100。
 
-        **说明：** 2020年05月27日以前系统创建的默认安全组规则的优先级为110。
+    **说明：** 2020年05月27日以前系统创建的默认安全组规则的优先级为110。
 
--   出方向：允许所有访问。
+-   针对TCP协议允许所有IP访问SSH\(22\)、RDP\(3389\)端口。
+-   针对ICMP\(IPv4\)协议允许所有IP访问所有端口。
+-   如果选中了**HTTP 80端口**和**HTTPS 443端口**，还会针对TCP协议允许所有IP访问HTTP\(80\)、HTTPS\(443\)端口。
 
-## 使用限制
+## 安全组托管模式
 
-ECS实例和弹性网卡对所属的安全组类型有以下要求：
-
--   一台ECS实例的主弹性网卡不能同时加入普通安全组和企业安全组。
--   一张辅助弹性网卡不能同时加入普通安全组和企业安全组。
-
-更多有关安全组的使用限制及配额，请参见[安全组使用限制](/intl.zh-CN/产品简介/使用限制.md)。
+部分其他云产品（例如云防火墙、NAT网关等）也会使用安全组的能力。为了保障云产品的服务可用，并防止您误操作资源，这些云产品会自动创建托管模式的安全组。该类安全组由对应的云产品管理，您只有查看权限，没有操作权限。更多信息，请参见[托管安全组](/intl.zh-CN/安全/安全组/托管安全组.md)。
 
 ## 实践建议
 
-安全组的使用流程，您可以参见[操作导航](/intl.zh-CN/安全/安全组/操作导航.md)。以下为一些实践建议。
+-   将安全组作为白名单使用，即默认拒绝所有访问，通过添加安全组规则设置允许访问的端口范围和授权对象。
+-   添加安全组规则时遵循最小授权原则。例如，开放Linux实例的22端口用于远程登录时，建议仅允许特定的IP访问，而非所有IP（`0.0.0.0/0`）。
+-   单个安全组内尽量保持规则简洁。单台实例可以加入多个安全组，单个安全组可以添加多条安全组规则，如果应用在单台实例上的安全组规则过多，会增加管理复杂度并引入风险。
+-   不同类型应用的实例加入不同的安全组，分别维护安全组规则。例如，需要接受公网访问的实例加入同一个安全组，默认拒绝所有访问，然后设置仅暴露对外提供服务的端口（例如80、443等）。同时避免在接受公网访问的实例上提供其他服务，例如MySQL、Redis等，建议将内部服务部署在不接受公网访问的实例上，并加入单独的安全组。
+-   避免直接修改线上环境使用的安全组。修改安全组设置后会自动应用于组内所有实例，您可以先克隆一个安全组并在测试环境调试，确保修改后实例间通信正常。
+-   合理定义安全组名称、标签等，方便快速识别安全组的用途，在管理较多安全组时更加清晰。
 
-使用安全组时
-
--   仅允许少量请求访问ECS实例时，可以将安全组作为白名单使用。即先设置安全组为拒绝全部访问，然后逐一添加允许通信的访问请求策略。
--   不建议使用一个安全组管理所有应用，不同的分层一定有不同的隔离需求。
--   不建议为每台ECS实例单独设置一个安全组，您只需将具有相同安全保护需求的ECS实例加入同一安全组。
-
-添加安全组规则时
-
--   建议您设置简洁的安全组规则。如果您给一台ECS实例分配了多个安全组，该ECS实例很可能会同时遵循数百条安全组规则，任何规则变更都可能引起网络不通的故障。
--   如果您需要修改生产环境的安全组规则，建议您提前在克隆的安全组上进行调试，避免影响线上应用。详情请参见[克隆安全组](/intl.zh-CN/安全/安全组/管理安全组/克隆安全组.md)。
--   为应用添加安全组规则时遵循最小授权原则。例如，您可以：
-    -   选择开放具体的端口，如80/80。不要设置为端口范围，如1/80。
-    -   添加安全组规则时，谨慎授权0.0.0.0/0（全网段）访问源。
+合理使用安全组可以有效提高实例的安全性，但提高实例安全性是一项系统的工作，您还可以结合更多其他做法。更多信息，请参见[安全最佳实践](/intl.zh-CN/安全/安全最佳实践.md)。
 
