--- a/cn.zh-CN/安全/安全组/安全组应用案例.md
+++ b/cn.zh-CN/安全/安全组/安全组应用案例.md
@@ -1,208 +1,109 @@
-# 安全组应用案例 {#concept_ngr_vht_xdb .concept}
+---
+keyword: [安全组, 应用案例, 虚拟防火墙, 访问策略]
+---
 
-本文介绍了几个常见的安全组应用案例，同时包括专有网络VPC和经典网络的安全组设置说明。
+# 安全组应用案例
 
-## 应用案例概述 {#section_c8c_jm2_f5h .section}
+本文针对网站提供Web服务、远程连接实例等常见场景，介绍如何基于安全组的特性配置安全组规则。
 
-ECS实例主要通过配置安全组规则，允许或禁止安全组内的ECS实例对公网或私网的访问。创建安全组和添加安全组规则的详细操作，请参见[创建安全组](cn.zh-CN/安全/安全组/创建安全组.md#)和[添加安全组规则](cn.zh-CN/安全/安全组/添加安全组规则.md#)。以下列举了常见的安全组规则配置案例供您参考：
+## 背景信息
 
--   [案例一：同一个地域、同一个账号下的实例实现内网互通](#) 
+本文中安全组规则示例的说明如下：
 
-    场景举例：如果您需要同一个地域、同一个账号下的ECS实例之间拷贝资源，您可以通过安全组设置实现两台ECS实例内网互通后再拷贝资源。
+-   均针对网络类型为专有网络的安全组，一条安全组规则同时适用于控制公网和内网访问。对于网络类型为经典网络的安全组，请注意为控制公网和内网访问分别创建安全组规则。
+-   均针对典型应用的默认端口。应用通过服务器的端口对外提供服务，更多信息，请参见[常用端口](/cn.zh-CN/安全/安全组/常用端口.md)。
 
--   [案例二：同一个地域、不同账号下的实例实现内网互通](#) 
+## 网站提供Web服务
 
-    场景举例：如果您需要同一个地域、不同账号下的ECS实例之间拷贝资源，您可以通过安全组设置实现两台ECS实例内网互通后再拷贝资源。
+安全组默认拒绝所有入方向访问。如果您在实例上搭建对外提供Web服务的网站，需要允许访问相应服务的端口，例如HTTP\(80\)、HTTPS\(443\)，安全组规则的配置示例如下表所示。
 
--   [案例三：只允许特定IP地址远程登录到实例](#) 
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|自定义TCP|目的：80/80|源：0.0.0.0/0|
+|入方向|允许|1|自定义TCP|目的：443/443|源：0.0.0.0/0|
 
-    场景举例：如果您的ECS实例被黑客远程控制，您可以修改远程登录端口号，并设置只允许特定的IP地址远程登录到您的ECS实例。
+**说明：** 如果添加安全组规则后仍无法访问网站，排查思路请参见[检查TCP 80端口是否正常工作](https://help.aliyun.com/document_detail/59367.html)。
 
--   [案例四：只允许实例访问外部特定IP地址](#) 
+## 从本地服务器远程连接实例
 
-    场景举例：如果您的ECS实例被黑客远程控制，对外恶意扫描或发包，您可以通过安全组设置您的ECS实例只能访问外部特定IP或端口。
+安全组默认拒绝所有入方向访问。从本地服务器远程连接实例前，需根据连接方式允许访问相应服务的端口，例如通过SSH远程连接Linux实例时允许访问SSH\(22\)，通过RDP远程连接Windows实例时允许访问RDP\(3389\)，安全组规则的配置示例如下表所示。
 
--   [案例五：拒绝实例访问外部特定IP地址](#) 
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|自定义TCP|目的：22/22|源：0.0.0.0/0|
+|入方向|允许|1|自定义TCP|目的：3389/3389|源：0.0.0.0/0|
 
-    场景举例：如果您不希望您的ECS实例访问某个特定的外部IP地址，您可以通过安全组设置，拒绝实例访问外部特定IP地址。
+**说明：** `0.0.0.0/0`为允许所有IP远程连接实例。为安全起见，建议您在实际业务中将授权对象设置为特定的IP，遵循最小授权原则。
 
--   [案例六：允许公网远程连接实例](#) 
+使用阿里云Workbench远程连接实例时，允许访问特定的服务器即可，安全组规则示例如下表所示。
 
-    场景举例：您可以通过公网远程连接到实例上，管理实例。
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|自定义TCP|目的：22/22|源：47.96.60.0/24,118.31.243.0/24|
+|入方向|允许|1|自定义TCP|目的：3389/3389|源：47.96.60.0/24,118.31.243.0/24|
 
--   [案例七：允许内网其他账号下某个安全组内的ECS实例远程连接实例](#) 
+**说明：** 关于使用Workbench连接经典网络实例的安全组规则说明，请参见[Linux实例相关安全组规则详情](/cn.zh-CN/实例/连接实例/使用Workbench连接实例/通过密码或密钥认证登录Linux实例.md)和[Windows实例相关安全组规则详情](/cn.zh-CN/实例/连接实例/使用Workbench连接实例/通过密码或密钥认证登录Windows实例.md)。
 
-    场景举例：您可以通过内网其他账号下某个安全组内的ECS实例远程连接到实例上，管理实例。
+## 不同安全组的实例内网互通
 
--   [案例八：允许公网通过HTTP、HTTPS等服务访问实例](#) 
+不同安全组之间的实例默认内网隔离。在同一个专有网络中，如果在实例间进行数据共享等操作，例如安全组A的实例都需要通过FTP查看安全组B的实例中的共享文件，您可以通过授权安全组访问实现内网互通，比授权单个IP地址或者CIDR地址块更加便捷。
 
-    场景举例：您在实例上架设了一个网站，希望您的用户能通过HTTP或HTTPS服务访问到您的网站。
+**说明：** 如果实例分属于不同的专有网络，则不能通过安全组实现内网互通。您可以使用云企业网连接不同专有网络之间的实例，更多信息，请参见[云企业网快速入门]()。
 
+安全组A和安全组B属于同一账号时，授权对象填写安全组ID即可，安全组规则的配置示例如下表所示。
 
-**说明：** 网络互访场景的常用端口，请参见[常用端口的典型应用](../../../../cn.zh-CN/安全/安全组/常用端口的典型应用.md#)。本文主要以IPv4为例说明安全组规则的配置案例，如果ECS实例分配了IPv6地址，您可以将文中涉及的IP地址授权对象修改为IPv6地址或地址段。
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|自定义TCP|目的：21/21|源：sg-bp1hv6wvmegs036\*\*\*\*|
 
-## 案例一：同一个地域、同一个账号下的实例实现内网互通 {#section_i35_nll_ngb .section}
+**说明：** 安全组ID仅为示例，请按实际情况替换。
 
-同一地域、同一账号的两个实例：
+安全组A和安全组B属于不同账号时，授权对象需要填写阿里云账号ID和安全组ID，安全组规则的配置示例如下表所示。
 
--   如果在同一个安全组内，默认内网互通，不需要设置。
--   如果在不同的安全组内，默认内网不通。此时，在实例所在安全组中分别添加一条安全组规则，授权另一个安全组内的实例访问本安全组内的实例，实现内网互通。根据网络类型做不同的安全组规则设置：
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|自定义TCP|目的：21/21|源：160998252992\*\*\*\*/sg-bp174yoe2ib1sqj5\*\*\*\*|
 
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|优先级|授权类型|授权对象|
-    |:---|:---|:---|:---|:---|:---|:--|:---|:---|
-    |专有网络|不需要设置|入方向|允许|设置适用的协议类型|设置端口范围|1|安全组访问（本账号授权）|选择允许访问的实例所在的安全组 ID|
-    |经典网络|内网|
+**说明：** 阿里云账号ID和安全组ID仅为示例，请按实际情况替换。
 
+## 提供数据库访问
 
-**说明：** 
+如果您在实例上部署了数据库，需要允许其他实例通过内网获取数据，请根据数据库类型允许访问相应服务的端口，例如MySQL \(3306\)、Oracle\(1521\)、MS SQL\(1433\)、PostgreSQL\(5432\)、Redis\(6379\)，安全组规则的配置示例如下表所示。
 
-对于VPC网络类型的ECS实例，如果它们在同一个VPC网络内，可以通过安全组规则实现内网互通。如果ECS实例不在同一个VPC内（无论是否属于同一个账号或在同一个地域里），您可以使用高速通道实现VPC互通。详情请参见[跨账号VPC互连](../../../../cn.zh-CN/专有网络对等连接（关闭新购）/跨账号VPC互连.md#)。
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|自定义TCP|目的：3306/3306|源：172.16.XX.XX|
+|入方向|允许|1|自定义TCP|目的：1521/1521|源：192.168.XX.XX|
+|入方向|允许|1|自定义TCP|目的：1433/1433|源：192.168.XX.XX/16|
+|入方向|允许|1|自定义TCP|目的：5432/5432|源：sg-bp1hv6wvmegs036\*\*\*\*|
+|入方向|允许|1|自定义TCP|目的：6379/6379|源：160998252992\*\*\*\*/sg-bp174yoe2ib1sqj5\*\*\*\*|
 
-## 案例二：同一个地域、不同账号下的实例实现内网互通 {#section_sfg_zll_ngb .section}
+**说明：** IP地址、CIDR地址块、阿里云账号ID和安全组ID仅为示例，请按实际情况替换。
 
-此案例仅适用于经典网络类型的ECS实例。
+## ping实例
 
-UserA在华东1有一台经典网络类型的ECS实例InstanceA（内网IP：A.A.A.A），InstanceA所属的安全组为GroupA。
+ICMP协议用于传递控制消息，允许基于ICMP协议的访问后才能完成一些测试操作，例如在客户端执行ping命令测试网络可达性，安全组规则的配置示例如下表所示。
 
-UserB在华东1有一台经典网络的ECS实例InstanceB（内网IP：B.B.B.B），InstanceB所属的安全组为GroupB。
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|入方向|允许|1|全部ICMP\(IPv4\)|目的：-1/-1|源：0.0.0.0/0|
+|入方向|允许|1|全部ICMP\(IPv6\)|目的：-1/-1|源：::/0|
 
-您需要在GroupA和GroupB中分别添加安全组规则，授权InstanceA和InstanceB内网互通。
+**说明：** 如果添加安全组规则后，仍然无法从客户端ping通实例，排查思路请参见[Linux系统的ECS中没有禁ping却ping不通的解决方法](https://help.aliyun.com/knowledge_detail/41332.html)。
 
--   在GroupA中添加安全组规则，授权InstanceB内网访问InstanceA，如下表所示。
+## 限制实例访问外部网站
 
-    |网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:--|
-    |内网|入方向|允许|选择适用的协议类型|设置端口范围|安全组访问（跨账号授权）|GroupB的ID，并在**账号ID**里填写UserB的ID|1|
+普通安全组默认允许所有出方向访问。如果需要限制实例只能访问指定网站，可以将安全组作为白名单使用，设置默认拒绝所有出方向访问，然后仅允许访问指定网站的IP，安全组规则的配置示例如下表所示。
 
--   在GroupB中添加安全组规则，授权InstanceA内网访问InstanceB，如下表所示。
+**说明：** 如果两条安全组规则只有授权策略不同，则拒绝策略的安全组规则生效，因此拒绝策略的优先级应低于允许策略的优先级。
 
-    |网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:--|
-    |内网|入方向|允许|选择适用的协议类型|设置端口范围|安全组访问（跨账号授权）|GroupA的ID，并在**账号ID**里填写UserA的ID|1|
+|规则方向|授权策略|优先级|协议类型|端口范围|授权对象|
+|----|----|---|----|----|----|
+|出方向|拒绝|2|全部|目的：-1/-1|目的：0.0.0.0/0|
+|出方向|允许|1|自定义TCP|目的：80/80|目的：47.96.XX.XX|
+|出方向|允许|1|自定义TCP|目的：443/443|目的：121.199.XX.XX|
 
-    **说明：** 出于安全性考虑，经典网络的内网入方向规则，授权类型优先选择**安全组访问**；如果选择**地址段访问**，则仅支持单IP授权，授权对象的格式只能是`a.b.c.d/32`，其中IP地址应根据您的实际需求设置，子网掩码必须是/32。
+**说明：** 网站的IP仅为示例，请按实际情况替换。
 
-
-## 案例三：只允许特定IP地址远程登录到实例 {#specifyIpAccess .section}
-
-如果您只想让某些特定IP地址远程登录到实例，可以参考以下示例的步骤在实例所在安全组里添加规则：
-
--   Linux实例
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|入方向|允许|SSH \(22\)|22/22|地址段访问|允许远程连接的IP地址，例如1.2.3.4/32或10.0.0.0/8。|1|
-    |经典网络|公网|
-
--   Windows实例
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|入方向|允许|RDP \(3389\)|3389/3389|地址段访问|允许远程连接的IP地址，例如1.2.3.4/32或10.0.0.0/8。|1|
-    |经典网络|公网|
-
-
-## 案例四：只允许实例访问外部特定IP地址 {#specifyInstanceAccess .section}
-
-如果您只想让实例访问特定的IP地址，参考以下示例的步骤在实例所在安全组中添加安全组规则：
-
--   禁止实例以任何协议访问所有公网IP地址，优先级应低于允许访问的规则（如本例中设置优先级为2）。安全组规则如下表所示。
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|出方向|拒绝|全部|-1/-1|地址段访问|0.0.0.0/0|2|
-    |经典网络|公网|
-
--   允许实例访问特定公网IP地址，优先级应高于拒绝访问的安全组规则的优先级（如本例中设置为1）。
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|出方向|允许|选择适用的协议类型|设置端口范围|地址段访问|允许实例访问的特定公网IP地址，例如1.2.3.4/32或10.0.0.0/8。|1|
-    |经典网络|公网|
-
-
-添加了安全组规则后，再连接实例，执行ping、telnet等测试。如果实例只能访问授权对象中设置的IP地址，说明安全组规则已经生效。
-
-## 案例五：拒绝实例访问外部特定IP地址 {#section_qtl_vhz_ngb .section}
-
-如果您不希望您的ECS实例访问某个特定的外部IP地址，您可以参考以下示例在实例所在安全组中添加安全组规则：
-
-|网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-|:---|:---|:---|:---|:---|:---|:---|:---|:--|
-|VPC|不需要配置|出方向|拒绝|全部|-1/-1|地址段访问|拒绝实例访问的特定公网IP地址，例如1.2.3.4/32或10.0.0.0/8。|1|
-|经典网络|公网|
-
-## 案例六：允许公网远程连接实例 {#allowRemoteAccess .section}
-
-如果要允许公网远程连接实例，添加如下安全组规则：
-
-|网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-|:---|:---|:---|:---|:---|:---|:---|:---|:--|
-|VPC|不需要配置|入方向|允许|Windows：RDP \(3389\)|3389/3389|地址段访问|如果允许任意公网IP地址连接实例，填写0.0.0.0/0。如果只允许特定IP地址远程连接实例，请参见案例三：只允许特定IP地址远程登录到实例。|1|
-|Linux：SSH \(22\)|22/22|
-|自定义TCP|自定义，例如8080/8080|
-|经典网络|公网|入方向|允许|Windows：RDP \(3389\)|3389/3389|地址段访问|如果允许任意公网IP地址连接实例，填写0.0.0.0/0。如果只允许特定公网IP地址连接实例，请参见案例三：只允许特定IP地址远程登录到实例。|1|
-|Linux：SSH \(22\)|22/22|
-|自定义TCP|自定义，例如8080/8080|
-
-自定义远程连接端口的详细操作，请参见[修改服务器默认远程端口](../../../../cn.zh-CN/最佳实践/安全/修改服务器默认远程端口.md#)。
-
-## 案例七：允许内网其他账号下某个安全组内的ECS实例远程连接实例 {#section_tkx_fyq_ngb .section}
-
-如果您的账号与同地域其他账号内网互通，而且您想允许内网其他账号下某个安全组内的ECS实例远程连接实例，按以下示例添加安全组规则。
-
--   允许内网其他账号某个实例内网IP地址连接您的实例，您需要添加如下安全组规则。其中，VPC网络类型实例先保证2个账号的实例通过高速通道内网互通，再添加安全组规则。详情请参见[同账号VPC互连](../../../../cn.zh-CN/专有网络对等连接（关闭新购）/同账号VPC互连.md#)。
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|入方向|允许|Windows：RDP \(3389\)|3389/3389|地址段访问|对方实例的私有IP地址|1|
-    |Linux：SSH \(22\)|22/22|
-    |自定义TCP|自定义，例如8080/8080|
-    |经典网络|内网|入方向|允许|Windows：RDP \(3389\)|3389/3389|地址段访问|对方实例的内网IP地址，出于安全性考虑，仅支持单IP授权，例如：a.b.c.d/32。|1|
-    |Linux：SSH \(22\)|22/22|
-    |自定义TCP|自定义，例如8080/8080|
-
--   允许内网其他账号某个安全组里的所有ECS实例连接您的实例，您需要添加如下安全组规则。其中，VPC类型的实例，先保证2个账号的实例通过高速通道内网互通，再添加如下表所示的安全组规则。详情请参见[同账号VPC互连](../../../../cn.zh-CN/专有网络对等连接（关闭新购）/同账号VPC互连.md#)。
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|入方向|允许|Windows：RDP \(3389\)|3389/3389|安全组访问（跨账号授权）|对方ECS实例所属的安全组ID，并填写对方账号ID|1|
-    |Linux：SSH \(22\)|22/22|
-    |自定义TCP|自定义，例如8080/8080|
-    |经典网络|内网|入方向|允许|Windows：RDP \(3389\)|3389/3389|安全组访问（跨账号授权）|对方ECS实例所属的安全组ID，并填写对方账号ID|1|
-    |Linux：SSH \(22\)|22/22|
-    |自定义TCP|自定义，例如8080/8080|
-
-
-## 案例八：允许公网通过HTTP、HTTPS等服务访问实例 {#allowHttp .section}
-
-如果您在实例上架设了一个网站，希望您的用户能通过HTTP或HTTPS服务访问到您的网站，您需要在实例所在安全组中添加以下安全组规则。
-
--   允许公网上所有IP地址访问您的网站。
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|入方向|允许|HTTP \(80\)|80/80|地址段访问|0.0.0.0/0|1|
-    |HTTPS \(443\)|443/443|
-    |自定义TCP|自定义，例如8080/8080|
-    |经典网络|公网|入方向|允许|HTTP \(80\)|80/80|地址段访问|0.0.0.0/0|1|
-    |HTTPS \(443\)|443/443|
-    |自定义TCP|自定义，如8080/8080|
-
--   允许公网上部分IP地址访问您的网站。
-
-    |网络类型|网卡类型|规则方向|授权策略|协议类型|端口范围|授权类型|授权对象|优先级|
-    |:---|:---|:---|:---|:---|:---|:---|:---|:--|
-    |VPC|不需要配置|入方向|允许|HTTP \(80\)|80/80|地址段访问|允许访问您网站的主机的公网IP地址，可以为一个或多个公网IP地址，例如1.2.3.4/32或10.0.0.0/8。|1|
-    |HTTPS \(443\)|443/443|
-    |自定义TCP|自定义，例如8080/8080|
-    |经典网络|公网|入方向|允许|HTTP \(80\)|80/80|地址段访问|允许访问您网站的主机的公网IP地址，可以为一个或多个公网IP地址，例如1.2.3.4/32或10.0.0.0/8。|1|
-    |HTTPS \(443\)|443/443|
-    |自定义TCP|自定义，例如8080/8080|
-
-
-**说明：** 
-
--   如果您无法通过`http://公网IP地址`访问您的实例，请参见[检查TCP 80端口是否正常工作](https://help.aliyun.com/document_detail/59367.html)。
--   80端口是HTTP服务默认端口。如果要使用其他端口，如8080端口，您必须修改Web服务器配置文件中监听端口设置。
+添加安全组规则后，您可以登录实例进行测试，例如执行ping命令。如果实例只能访问指定的IP地址，说明安全组规则已经生效。
 
