--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -26,7 +26,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 
 ## 通用型实例规格族g7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 g7a的特点如下：
 
@@ -133,7 +133,7 @@ g7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强通用型实例规格族g7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 g7t的特点如下：
 
@@ -269,7 +269,7 @@ g6r包括的实例规格及指标数据如下表所示。
 
 ## 存储增强型实例规格族g6se
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 g6se的特点如下：
 
