--- a/intl.zh-CN/实例/选择实例规格/通用型.md
+++ b/intl.zh-CN/实例/选择实例规格/通用型.md
@@ -25,7 +25,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 
 ## 通用型实例规格族g7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 g7a的特点如下：
 
@@ -74,7 +74,7 @@ g7a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g7
 
@@ -128,11 +128,11 @@ g7包括的实例规格及指标数据如下表所示。
 
 -   如果使用VNC登录Windows实例，可能会出现两个光标，您可以参见[为什么使用VNC登录Windows实例后出现两个光标](/intl.zh-CN/实例/实例FAQ.md)修改鼠标设置来解决此问题。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强通用型实例规格族g7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 g7t的特点如下：
 
@@ -184,7 +184,7 @@ g7t包括的实例规格及指标数据如下表所示。
 -   实例变配规格、停机不收费等操作均可能造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   实例默认未开启宕机自动迁移，您可以自行修改。具体操作，请参见[修改实例维护属性](/intl.zh-CN/实例/管理实例属性/修改实例维护属性.md)。宕机自动迁移会造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 网络增强型实例规格族g7ne
 
@@ -224,11 +224,11 @@ g7ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 存储增强型实例规格族g6se
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 g6se的特点如下：
 
@@ -267,7 +267,7 @@ g6se包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g6a
 
@@ -317,7 +317,7 @@ g6a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强通用型实例规格族g6t
 
@@ -369,7 +369,7 @@ g6t包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 通用平衡增强型实例规格族g6e
@@ -422,7 +422,7 @@ g6e包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 通用型实例规格族g6
@@ -481,7 +481,7 @@ g6包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g5
 
@@ -526,7 +526,7 @@ g5包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 网络增强型实例规格族g5ne
 
@@ -567,7 +567,7 @@ g5ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 通用网络增强型实例规格族sn2ne
 
@@ -606,7 +606,7 @@ sn2ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
 ## 相关链接
 
