--- a/cn.zh-CN/实例/选择实例规格/计算型.md
+++ b/cn.zh-CN/实例/选择实例规格/计算型.md
@@ -24,7 +24,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 
 ## 计算型实例规格族c7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 c7a的特点如下：
 
@@ -74,7 +74,7 @@ c7a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 计算型实例规格族c7
 
@@ -128,11 +128,11 @@ c7包括的实例规格及指标数据如下表所示。
 
 -   建议您使用Workbench登录Windows实例。如果使用VNC登录Windows实例，可能会出现两个光标，您可以参见[为什么使用VNC登录Windows实例后出现两个光标](/cn.zh-CN/实例/实例FAQ.md)修改鼠标设置来解决此问题。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强计算型实例规格族c7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 c7t的特点如下：
 
@@ -184,7 +184,7 @@ c7t包括的实例规格及指标数据如下表所示。
 -   实例变配规格、停机不收费等操作均可能造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   实例默认未开启宕机自动迁移，您可以自行修改。具体操作，请参见[修改实例维护属性](/cn.zh-CN/实例/管理实例属性/修改实例维护属性.md)。宕机自动迁移会造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 计算型实例规格族c6r
 
@@ -224,7 +224,7 @@ c6r包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 计算型实例规格族c6a
 
@@ -272,7 +272,7 @@ c6a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强计算型实例规格族c6t
 
@@ -324,7 +324,7 @@ c6t包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 计算平衡增强型实例规格族c6e
@@ -375,7 +375,7 @@ c6e包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 计算型实例规格族c6
@@ -429,7 +429,7 @@ c6包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 计算型实例规格族c5
 
@@ -471,7 +471,7 @@ c5包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 密集计算型实例规格族ic5
 
@@ -505,7 +505,7 @@ ic5包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 计算网络增强型实例规格族sn1ne
 
@@ -543,7 +543,7 @@ sn1ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 相关链接
 
