--- a/intl.zh-CN/实例/选择实例规格/计算型.md
+++ b/intl.zh-CN/实例/选择实例规格/计算型.md
@@ -23,7 +23,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 
 ## 计算型实例规格族c7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 c7a的特点如下：
 
@@ -131,7 +131,7 @@ c7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强计算型实例规格族c7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 c7t的特点如下：
 
