--- a/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/intl.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -24,7 +24,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
 
 ## 内存型实例规格族r7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 r7a的特点如下：
 
@@ -126,7 +126,7 @@ r7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强内存型实例规格族r7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 r7t的特点如下：
 
