--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -155,7 +155,7 @@ keyword: [ECS实例规格族, 实例规格族]
 
 ## 通用型实例规格族g7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 g7a的特点如下：
 
@@ -262,7 +262,7 @@ g7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强通用型实例规格族g7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 g7t的特点如下：
 
@@ -456,7 +456,7 @@ g6包括的实例规格及指标数据如下表所示。
 
 ## 存储增强型实例规格族g6se
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 g6se的特点如下：
 
@@ -700,7 +700,7 @@ g5包括的实例规格及指标数据如下表所示。
 
 ## 存储增强型实例规格族g5se
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 g5se的特点如下：
 
@@ -784,7 +784,7 @@ g5ne包括的实例规格及指标数据如下表所示。
 
 ## 计算型实例规格族c7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 c7a的特点如下：
 
@@ -892,7 +892,7 @@ c7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强计算型实例规格族c7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 c7t的特点如下：
 
@@ -1269,7 +1269,7 @@ ic5包括的实例规格及指标数据如下表所示。
 
 ## 内存型实例规格族r7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 r7a的特点如下：
 
@@ -1371,7 +1371,7 @@ r7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强内存型实例规格族r7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 r7t的特点如下：
 
@@ -1817,7 +1817,7 @@ d1ne包括的实例规格及指标数据如下表所示。
 
 ## 本地SSD型实例规格族i3g
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 i3g的特点如下：
 
@@ -2726,7 +2726,7 @@ hfg5包括的实例规格及指标数据如下表所示。
 
 ## GPU计算型实例规格族gn7i
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 gn7i的特点如下：
 
@@ -2959,7 +2959,7 @@ gn6v包括的实例规格及指标数据如下表所示。
 
 ## 异构服务型实例规格族video-enhance
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 视频增强产品的特点如下：
 
@@ -3223,7 +3223,7 @@ f1包括的实例规格及指标数据如下表所示。
 
 ## GPU计算型弹性裸金属服务器实例规格族ebmgn7i
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://selfservice.console.aliyun.com/ticket/createIndex)。
 
 ebmgn7i的特点如下：
 
