--- a/intl.zh-CN/实例/实例规格族.md
+++ b/intl.zh-CN/实例/实例规格族.md
@@ -148,7 +148,7 @@ keyword: [ECS实例规格族, 实例规格族]
 
 ## 通用型实例规格族g7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 g7a的特点如下：
 
@@ -255,7 +255,7 @@ g7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强通用型实例规格族g7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 g7t的特点如下：
 
@@ -409,7 +409,7 @@ g6包括的实例规格及指标数据如下表所示。
 
 ## 存储增强型实例规格族g6se
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 g6se的特点如下：
 
@@ -653,7 +653,7 @@ g5包括的实例规格及指标数据如下表所示。
 
 ## 存储增强型实例规格族g5se
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 g5se的特点如下：
 
@@ -737,7 +737,7 @@ g5ne包括的实例规格及指标数据如下表所示。
 
 ## 计算型实例规格族c7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 c7a的特点如下：
 
@@ -845,7 +845,7 @@ c7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强计算型实例规格族c7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 c7t的特点如下：
 
@@ -1180,7 +1180,7 @@ ic5包括的实例规格及指标数据如下表所示。
 
 ## 内存型实例规格族r7a
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 r7a的特点如下：
 
@@ -1282,7 +1282,7 @@ r7包括的实例规格及指标数据如下表所示。
 
 ## 安全增强内存型实例规格族r7t
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中，如需使用，请前往[控制台](https://ecs-buy.aliyun.com/wizard/#/prepay/cn-beijing)购买。
 
 r7t的特点如下：
 
@@ -1726,7 +1726,7 @@ d1ne包括的实例规格及指标数据如下表所示。
 
 ## 本地SSD型实例规格族i3g
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 i3g的特点如下：
 
@@ -2633,7 +2633,7 @@ hfg5包括的实例规格及指标数据如下表所示。
 
 ## GPU计算型实例规格族gn7i
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 gn7i的特点如下：
 
@@ -3042,7 +3042,7 @@ f1包括的实例规格及指标数据如下表所示。
 
 ## GPU计算型弹性裸金属服务器实例规格族ebmgn7i
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
 
 ebmgn7i的特点如下：
 
