--- a/intl.zh-CN/快照/快照概述.md
+++ b/intl.zh-CN/快照/快照概述.md
@@ -21,7 +21,7 @@ keyword: [备份, 数据备份, 回滚, 灾备, 运维]
 
 |-   [创建一个云盘快照](/intl.zh-CN/快照/使用快照/创建一个云盘快照.md)
 -   [创建多个云盘快照（实例快照）](/intl.zh-CN/快照/使用实例快照/创建多个云盘快照（实例快照）.md)
--   [自动快照策略概述](/intl.zh-CN/快照/使用自动快照策略/自动快照策略概述.md) |
+-   [自动快照概述](/intl.zh-CN/快照/使用自动快照策略/自动快照策略概述.md) |
 |回滚云盘|发生系统故障或错误操作时，您可以使用快照回滚云盘，实现应用版本回退。|[使用快照回滚云盘](/intl.zh-CN/快照/使用快照/使用快照回滚云盘.md)|
 |使用系统盘快照创建镜像|通过快照创建自定义镜像，您可以将一台ECS实例的操作系统、数据制作成环境副本，再通过自定义镜像创建多台ECS实例，快速复制应用环境。|[使用快照创建自定义镜像](/intl.zh-CN/镜像/自定义镜像/创建自定义镜像/使用快照创建自定义镜像.md)|
 |使用快照创建云盘|通过快照创建云盘，您可以快速复制云盘。|[使用快照创建云盘](/intl.zh-CN/块存储/云盘/创建云盘/使用快照创建云盘.md)|
