--- a/cn.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2支持内核热补丁/内核热补丁知识库.md
+++ b/cn.zh-CN/镜像/Alibaba Cloud Linux 2/Alibaba Cloud Linux 2支持内核热补丁/内核热补丁知识库.md
@@ -2,6 +2,7 @@
 
 本文提供Alibaba Cloud Linux 2内核热补丁相关的故障排查与解决方案。
 
+-   [Alibaba Cloud Linux 2系统的ECS实例中Page Fault异常导致系统宕机](https://help.aliyun.com/document_detail/277447.html)
 -   [Alibaba Cloud Linux 2系统的ECS实例中SGX驱动在特定情况下存在内存泄露问题](https://help.aliyun.com/document_detail/273082.html)
 -   [Alibaba Cloud Linux 2系统的ECS实例中断处理释放内存页时由于访问空指针导致系统宕机](https://help.aliyun.com/document_detail/273079.html)
 -   [Alibaba Cloud Linux 2系统的ECS实例中使用已释放的文件系统inode导致系统宕机](https://help.aliyun.com/document_detail/272587.html)
