--- a/cn.zh-CN/运维与监控/云助手/使用云助手/使用云助手插件.md
+++ b/cn.zh-CN/运维与监控/云助手/使用云助手/使用云助手插件.md
@@ -1,10 +1,13 @@
 # 使用云助手插件
 
-云助手提供插件机制，通过运行插件可以方便运维和管理ECS实例。
+云助手不仅能远程执行命令和上传文件，还提供了插件机制。通过云助手插件，您使用简单的命令就能够完成复杂的配置操作，提升运维管理效率。
 
 |云助手插件|描述|
 |-----|--|
-|运行方式|-   通过SSH登录ECS实例并执行命令（仅支持Linux）。
+|运行方式|-   通过SSH登录到ECS实例，并在ECS实例上直接执行命令（仅支持Linux）。
+
+如何登录ECS实例，请参见[连接方式概述](/cn.zh-CN/实例/连接实例/连接方式概述.md)。
+
 -   通过ECS控制台中的[云助手控制台](https://ecs.console.aliyun.com/#/cloudAssistant/region/cn-hangzhou)。 |
 |使用方法|-   查询插件：`acs-plugin-manager --list`
 -   运行插件：`acs-plugin-manager --exec --plugin <plugin name>` |
@@ -12,28 +15,29 @@
 -   [自动配置弹性网卡](#section_okd_pex_wj4)
 -   [配置IPv6](#section_bwr_si1_joa)
 -   [配置网卡多队列](#section_xeh_s2g_rju)
--   [Intel超线程HT管理](#section_5rc_xrv_ya1) |
+-   [Intel超线程HT管理](#section_5rc_xrv_ya1)
+-   [管理安全补丁](#section_z3n_6l4_43s) |
 
 ## 配置kdump
 
-通过`ecs_dump_config`插件，开启、关闭或查询dump功能。
+kdump是Linux内核的一个功能，可在发生内核错误时创建核心转储。通过`ecs_dump_config`插件，开启、关闭或查询dump功能。
 
 -   开启dump
 
     ```
-    acs-plugin-manager --exec   --plugin=ecs_dump_config --params --enable
+    acs-plugin-manager --exec --plugin=ecs_dump_config --params --enable
     ```
 
 -   关闭dump
 
     ```
-    acs-plugin-manager --exec   --plugin=ecs_dump_config --params --disable
+    acs-plugin-manager --exec --plugin=ecs_dump_config --params --disable
     ```
 
 -   查询dump状态
 
     ```
-    acs-plugin-manager --exec   --plugin=ecs_dump_config --params --status
+    acs-plugin-manager --exec --plugin=ecs_dump_config --params --status
     ```
 
 
@@ -42,7 +46,7 @@
 一般情况下添加弹性网卡后，您需要手动设置所添加网卡的网络配置。通过`multi-nic-util`插件自动配置网卡的相关网络配置。
 
 ```
-acs-plugin-manager  --exec   --plugin=multi-nic-util
+acs-plugin-manager --exec --plugin=multi-nic-util
 ```
 
 ## 配置IPv6
@@ -52,31 +56,31 @@ acs-plugin-manager  --exec   --plugin=multi-nic-util
 -   开启IPv6
 
     ```
-    acs-plugin-manager  --exec   --plugin=ecs-utils-ipv6 --params  --enable
+    acs-plugin-manager --exec --plugin=ecs-utils-ipv6 --params --enable
     ```
 
 -   关闭IPv6
 
     ```
-    acs-plugin-manager  --exec   --plugin=ecs-utils-ipv6 --params --disable
+    acs-plugin-manager --exec --plugin=ecs-utils-ipv6 --params --disable
     ```
 
 -   自动配置IPv6
 
     ```
-    acs-plugin-manager  --exec   --plugin=ecs-utils-ipv6
+    acs-plugin-manager --exec --plugin=ecs-utils-ipv6
     ```
 
 -   手动配置IPv6
 
     ```
-    acs-plugin-manager  --exec   --plugin=ecs-utils-ipv6   --params  --static,<dev>,<ip6s>,<prefix_len>,<gw6>
+    acs-plugin-manager --exec --plugin=ecs-utils-ipv6 --params --static,<dev>,<ip6s>,<prefix_len>,<gw6>
     ```
 
     示例如下所示。
 
     ```
-    acs-plugin-manager  --exec   --plugin=ecs-utils-ipv6   --params  --static,eth0,fe80::216:3eff:****:****,64,2408:400a:108:8300:ffff:ffff:****:****
+    acs-plugin-manager --exec --plugin=ecs-utils-ipv6 --params --static,eth0,fe80::216:3eff:****:****,64,2408:400a:108:8300:ffff:ffff:****:****
     ```
 
 
@@ -87,7 +91,7 @@ acs-plugin-manager  --exec   --plugin=multi-nic-util
 通过`ecs_tools_multiqueue`插件可以将所有网卡的队列数设置为支持的最大值。
 
 ```
-acs-plugin-manager  --exec   --plugin=ecs_tools_multiqueue
+acs-plugin-manager --exec --plugin=ecs_tools_multiqueue
 ```
 
 ## Intel超线程HT管理
@@ -101,6 +105,29 @@ acs-plugin-manager  --exec   --plugin=ecs_tools_multiqueue
 **说明：** 此插件不支持在非裸金属实例规格上关闭HT。在非裸金属规格实例上执行此插件后，会提示该实例非裸金属实例规格并退出。
 
 ```
-acs-plugin-manager  --exec   --plugin=ecs_disable_intel_hyper-threading
+acs-plugin-manager --exec --plugin=ecs_disable_intel_hyper-threading
 ```
+
+## 管理安全补丁
+
+ECS实例上的安全漏洞需要及时处理并修复，否则将带来严重的安全隐患。通过补丁管理插件`patch_manager`，您可以扫描和安装ECS实例内部缺失的安全补丁。
+
+-   扫描安全补丁
+
+    ```
+    acs-plugin-manager --exec --plugin=patch_manager --params --operation,scan
+    ```
+
+-   安装安全补丁，系统根据需要自动重启ECS实例
+
+    ```
+    acs-plugin-manager --exec --plugin=patch_manager --params --operation,install,--reboot,ifneed
+    ```
+
+-   只安装安全补丁，不重启ECS实例
+
+    ```
+    acs-plugin-manager --exec --plugin=patch_manager --params --operation,install,--reboot,no
+    ```
+
 
